# unicorn-binance-trailing-stop-loss

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TASKS.md  environment.yml  example_binance_trailing_stop_loss.py  llms.txt  meta.yaml  pyproject.toml  requirements.txt  setup.py  unittest_binance_trailing_stop_loss.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_conda.yml  build_wheels.yml  unit-tests.yml
cli/: README.md  example_ubtsl_config.ini  example_ubtsl_profiles.ini
dev/: set_version.py  set_version_config.txt
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/sphinx/source/: changelog.md  cli.md  conf.py  license.rst  readme.md
docs/: .buildinfo  changelog.html  cli.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_binance_trailing_stop_loss.html
docs/_modules/: index.html
docs/_modules/unicorn_binance_trailing_stop_loss/: cli.html  manager.html
docs/_sources/: cli.md.txt  contributing.md.txt  readme.md.txt
unicorn_binance_trailing_stop_loss/: __init__.py  cli.py  manager.py
