[tool.poetry]
name = "unicorn-binance-trailing-stop-loss"
version = "1.1.0"
description = "A Python library with a command line interface for a trailing stop loss and smart entry on the Binance exchange."
authors = ["Oliver Zehentleitner"]
license = "MIT"
readme = "README.md"
homepage = "https://www.lucit.tech/unicorn-binance-trailing-stop-loss.html"
documentation = "https://unicorn-binance-trailing-stop-loss.docs.lucit.tech"
repository = "https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss"

[tool.poetry.urls]
'Howto' = 'https://www.lucit.tech/unicorn-binance-trailing-stop-loss.html#howto'
'Documentation' = 'https://unicorn-binance-trailing-stop-loss.docs.lucit.tech'
'Wiki' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss/wiki'
'Author' = 'https://about.me/oliver-zehentleitner'
'Changes' = 'https://unicorn-binance-trailing-stop-loss.docs.lucit.tech/changelog.html'
'License' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss/blob/master/LICENSE'
'Issue Tracker' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss/issues'
'Telegram' = 'https://t.me/unicorndevs'
'Chat' = 'https://app.gitter.im/#/room/#unicorn-binance-trailing-stop-loss:gitter.im'

[tool.poetry.dependencies]
python = ">=3.9.0"
Cython = "*"
requests = "*"
unicorn-binance-rest-api = ">=2.2.0"
unicorn-binance-websocket-api = ">=2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
ubtsl = "unicorn_binance_trailing_stop_loss.cli:main"

[tool.poetry.package_data]
unicorn_binance_trailing_stop_loss = ["*.so", "*.dll"]
