[tool.poetry]
name = "unicorn-binance-trailing-stop-loss"
version = "1.3.0"
description = "A Python library with a command line interface for a trailing stop loss and smart entry on the Binance exchange."
authors = ["Oliver Zehentleitner"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss"
documentation = "https://oliver-zehentleitner.github.io/unicorn-binance-trailing-stop-loss"
repository = "https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss"

[tool.poetry.urls]
'Howto' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss#howto'
'Documentation' = 'https://oliver-zehentleitner.github.io/unicorn-binance-trailing-stop-loss'
'Wiki' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss/wiki'
'Author' = 'https://about.me/oliver-zehentleitner'
'Changes' = 'https://oliver-zehentleitner.github.io/unicorn-binance-trailing-stop-loss/changelog.html'
'License' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss/blob/master/LICENSE'
'Issue Tracker' = 'https://github.com/oliver-zehentleitner/unicorn-binance-trailing-stop-loss/issues'
'Telegram' = 'https://t.me/unicorndevs'

[tool.poetry.dependencies]
python = ">=3.9.0"
Cython = "*"
requests = "*"
unicorn-binance-rest-api = ">=2.2.0"
unicorn-binance-websocket-api = ">=2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
ubtsl = "unicorn_binance_trailing_stop_loss.cli:main"

[tool.poetry.package_data]
unicorn_binance_trailing_stop_loss = ["*.so", "*.dll"]
